# ham2spec

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  justfile  pyproject.toml
examples/: multiple_broadened_spectra.rs  stick_spectrum.rs
src/: lib.rs
validation_data/: README.md  abs.txt  cd.txt  dipole_moments.txt  dipole_strengths.txt  eigenvalues.txt  eigenvectors.txt  exciton_dipole_moments.txt  hamiltonian.txt  positions.txt  rotational_strengths.txt  x.txt
