[package]
name = "ham2spec"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ham2spec"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = "0.15.1"
numpy = "0.15.0"
lapack = "0.19.0"
lapack-src = { version = "0.8.0", features = ["accelerate"]}
ndarray = { version = "0.15.0", features = ["approx-0_5"] }

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
approx = "0.5.0"

[[example]]
name = "stick_spectrum"
path = "examples/stick_spectrum.rs"

# Necessary for profiling
[profile.release]
debug = true