[package]
name = "ham2spec"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ham2spec"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = "0.15.1"
numpy = "0.15.0"
ndarray = { version = "0.15.0", features = ["approx-0_5", "rayon"] }
lapack = "0.19.0"

[target.'cfg(target_os = "macos")'.dependencies]
lapack-src = { version = "0.8.0", features = ["accelerate"]}

[target.'cfg(any(target_os="linux", target_os="windows"))'.dependencies]
lapack-src = {version = "0.8.0", features = ["openblas"]}

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
approx = "0.5.0"

[[example]]
name = "stick_spectrum"
path = "examples/stick_spectrum.rs"

# Necessary for profiling
[profile.release]
debug = true