[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "ham2spec"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry]
name = "ham2spec"
version = "0.1.0"
description = "A Python extension for computing spectra from Hamiltonians"
authors = ["Zach Mitchell <zmitchell@fastmail.com>"]

[tool.poetry.dependencies]
numpy = ">=1.18"
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1"